# tooltest

./: .dockerignore  .gitignore  .release-plz.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  docker-bake.hcl  install.sh  release-plz.toml  skills.lock.json  tooltest.toml
.beads/: issues.jsonl  last-touched
.beads/formulas/: lambda-workflow.formula.toml
.cargo/: config.toml
.githooks/: _br_sync_import.sh  post-checkout  post-merge  post-rewrite  pre-commit  pre-push
.github/workflows/: ci.yml  release-plz.yml
.qlty/: qlty.toml
docker/agents/: ampcode.Dockerfile  codex.Dockerfile  devtools.Dockerfile
docker/base/: Dockerfile
docs/: coverage-mismatch.md  mcp-spec.html  mcp-spec.md  pctx-claude-setup.md  releasing.md
openspec/changes/add-br-hooks-and-triage/: design.md  proposal.md  tasks.md
openspec/changes/add-br-hooks-and-triage/specs/agent-issue-tracking/: spec.md
openspec/changes/add-cli-run-safety-flags/: proposal.md  tasks.md
openspec/changes/add-cli-run-safety-flags/specs/mcp-sequence-runner/: spec.md
openspec/changes/add-corpus-debug-logging/: proposal.md  tasks.md
openspec/changes/add-corpus-debug-logging/specs/mcp-sequence-runner/: spec.md
openspec/changes/add-cratesio-publishing/: proposal.md  tasks.md
openspec/changes/add-cratesio-publishing/specs/release-publishing/: spec.md
openspec/changes/add-json-schema-keyword-compat-lint/: proposal.md  tasks.md
openspec/changes/add-json-schema-keyword-compat-lint/specs/mcp-sequence-runner/: spec.md
openspec/changes/add-jsonschema-anyof-support/: proposal.md  tasks.md
openspec/changes/add-jsonschema-anyof-support/specs/mcp-sequence-runner/: spec.md
openspec/changes/add-latest-release-artifacts/: design.md  proposal.md  tasks.md
openspec/changes/add-latest-release-artifacts/specs/release-artifacts/: spec.md
openspec/changes/add-pre-run-command-hook/: proposal.md  tasks.md
openspec/changes/add-pre-run-command-hook/specs/mcp-sequence-runner/: spec.md
openspec/changes/add-schema-constraint-generators/: proposal.md
openspec/changes/add-schema-constraint-generators/specs/mcp-sequence-runner/: spec.md
openspec/changes/add-state-machine-sequence-sourcing/: design.md  proposal.md  tasks.md
openspec/changes/add-state-machine-sequence-sourcing/specs/mcp-sequence-runner/: spec.md
openspec/changes/add-text-mining-flag/: proposal.md  tasks.md
openspec/changes/add-text-mining-flag/specs/mcp-sequence-runner/: spec.md
openspec/changes/add-tooltest-core/: design.md  proposal.md  tasks.md
openspec/changes/add-tooltest-mcp-mode/: design.md  proposal.md  tasks.md
openspec/changes/add-tooltest-profiling/: proposal.md  tasks.md
openspec/changes/add-uncallable-tool-trace/: proposal.md  tasks.md
openspec/changes/archive/2026-01-29-add-schema-constraint-generators/: tasks.md
openspec/changes/archive/2026-02-05-add-lint-framework/: design.md  proposal.md  tasks.md
openspec/changes/refactor-encode-invariants/: proposal.md  tasks.md
openspec/changes/replace-bd-with-br/: design.md  proposal.md  tasks.md
openspec/changes/update-cli-command-parsing/: proposal.md  tasks.md
openspec/changes/update-coverage-corpus-aggregation/: proposal.md  tasks.md
openspec/changes/update-in-band-error-flag/: proposal.md  tasks.md
openspec/changes/update-mcp-schema-validation/: proposal.md  tasks.md
openspec/changes/update-rust-coverage-tool/: proposal.md  tasks.md
openspec/specs/mcp-sequence-runner/: spec.md
scripts/: check-docker-bake.sh  tooltest-prof  tooltest-prof-build  update-mcp-schema.sh
skills/bd-to-br-migration/: SKILL.md
skills/bd-to-br-migration/scripts/: find-bd-refs.sh  verify-migration.sh
skills/beads/: CLAUDE.md  README.md  SKILL.md
skills/beads/adr/: 0001-bd-prime-as-source-of-truth.md
skills/lambda-workflow/: SKILL.md
skills/testing-patterns/: SKILL.md
skills/tooltest-fix-loop/: SKILL.md
tooltest/: CHANGELOG.md  Cargo.toml
tooltest-cli/: Cargo.toml
tooltest-cli/src/: lib.rs  main.rs  test_server.rs
tooltest-cli/tests/: cli_tests.rs
tooltest-core/: CHANGELOG.md  Cargo.toml  README.md
tooltest-core/resources/: README.md  mcp-schema-2025-11-25.source.txt
tooltest-core/src/: coverage_filter.rs  default_tooltest.toml  generator.rs  input.rs  lib.rs  lint.rs  lint_config.rs  lints.rs  output_schema.rs  runner.rs  schema.rs  schema_dialect.rs  session.rs  validation.rs
tooltest-core/src/generator/: corpus.rs  mod.rs  schema.rs
tooltest-core/src/runner/: assertions.rs  coverage.rs  execution.rs  linting.rs  mod.rs  pre_run.rs  prepare.rs  result.rs  schema.rs  sequence.rs  state_machine.rs  transport.rs
tooltest-core/src/tests/: generator_tests.rs  mod.rs  state_machine_tests.rs
tooltest-core/src/validation/: listing.rs  mod.rs  validators.rs
tooltest-core/tests/: feature_guard.rs  generator_tests.rs  hosted_mcp_tests.rs  lib_tests.rs  listing_tests.rs  output_schema_validation_tests.rs  runner_tests.rs  schema_tests.rs  session_tests.rs
tooltest-core/tests/fixtures/: kev_get_related_cves_schema.json
tooltest-core/tests/internal/: docs_tests.rs  generator_tests.rs  generator_unit_tests.rs  hosted_mcp_tests.rs  input_tests.rs  lib_tests.rs  mod.rs  output_schema_unit_tests.rs  output_schema_validation_tests.rs  runner_tests.rs  runner_unit_tests.rs  schema_tests.rs  schema_unit_tests.rs  session_tests.rs  session_unit_tests.rs  state_machine_tests.rs  stdio_test_server_tests.rs  test_support.rs  validation_unit_tests.rs
tooltest-core/tests/support/: mod.rs
tooltest-ffi/: Cargo.toml
tooltest-ffi/src/: lib.rs
tooltest-test-support/: Cargo.toml
tooltest-test-support/src/: lib.rs  test_server.rs
tooltest-test-support/tests/: test_server_tests.rs
tooltest/src/: cli.rs  config.rs  lib.rs  main.rs  mcp.rs  output.rs  test_server.rs  tests.rs  trace.rs
tooltest/src/mcp/: schema.rs  server.rs  tests.rs  transport.rs  worker.rs
tooltest/tests/: cli_tests.rs  flaky_stdio_server_bin_tests.rs  flaky_stdio_server_tests.rs  manifest_tests.rs  test_server_tests.rs  tooltest_prof_tests.rs
tooltest/tests/support/: flaky_stdio_server.rs
(+13 files in other folders)
