[package]
name = "tooltest-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "tooltest"
path = "src/main.rs"
test = false

[features]
cli-test-server = []

[[bin]]
name = "tooltest_cli_test_server"
path = "src/bin/tooltest_cli_test_server.rs"
test = false
required-features = ["cli-test-server"]

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
rmcp = { workspace = true, features = ["client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tooltest-core = { path = "../tooltest-core" }
tooltest-test-support = { path = "../tooltest-test-support" }

[dev-dependencies]
serde_json = "1"
