[package]
name = "tooltest-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "0.12", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
proptest = "1"
jsonschema = "0.26"
regex = "1"
tokio = { version = "1", features = ["macros", "process", "rt", "time"] }
nonempty = "0.10"

[dev-dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
