[package]
name = "tooltest-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core runner for MCP conformance testing."
repository.workspace = true
readme = "README.md"
exclude = ["src/bin/stdio_test_server.rs"]

[[bin]]
name = "stdio_test_server"
path = "src/bin/stdio_test_server.rs"
test = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
schemars = "1.0"
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
proptest = "1"
proptest_async = { version = "0.2", default-features = false, features = ["tokio"] }
proptest-state-machine = "0.6"
jsonschema = "0.26"
regex = "1"
regex-syntax = "0.8"
rslint_regex = "0.3"
tokio = { version = "1", features = ["macros", "process", "rt", "rt-multi-thread", "time"] }
nonempty = "0.10"
chrono = "0.4"

[dev-dependencies]
axum = "0.7"
schemars = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tooltest-test-support = { path = "../tooltest-test-support" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
