[package]
name = "tooltest-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "tooltest_test_server"
path = "src/bin/tooltest_test_server.rs"
test = false

[dependencies]
rmcp = { workspace = true, features = ["client"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
