[package]
name = "tooltest-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ctor = "0.2"
env_logger = "0.11"
rmcp = { workspace = true, features = ["client"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
