[package]
name = "tooltest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI conformance testing for MCP servers."
repository.workspace = true
readme = "../README.md"

[[bin]]
name = "tooltest"
path = "src/main.rs"
test = false

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
rmcp = { workspace = true, features = ["client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tooltest-core = { path = "../tooltest-core", version = "0.1.0" }

[dev-dependencies]
serde_json = "1"
tooltest-test-support = { path = "../tooltest-test-support" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
