[package]
name = "tooltest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI conformance testing for MCP servers."
repository.workspace = true
readme = "../README.md"
exclude = [
    "src/bin/tooltest_flaky_stdio_server.rs",
    "src/bin/tooltest_test_server.rs",
    "src/test_server.rs",
    "tests/support/flaky_stdio_server.rs",
]

[[bin]]
name = "tooltest"
path = "src/main.rs"
test = false

[[bin]]
name = "tooltest_test_server"
path = "src/bin/tooltest_test_server.rs"
test = false

[[bin]]
name = "tooltest_flaky_stdio_server"
path = "src/bin/tooltest_flaky_stdio_server.rs"
test = false

[dependencies]
axum = "0.7"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
rmcp = { workspace = true, features = ["client", "transport-async-rw", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tooltest-core = { path = "../tooltest-core", version = "0.4.0" }

[dev-dependencies]
chrono = "0.4"
serde_json = "1"
tooltest-test-support = { path = "../tooltest-test-support" }
toml = "0.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
